style(ContentFooter.module.scss): enhance focus styles for better accessibility and consistency style(ContentFooter.module.scss): fix formatting and spacing for improved readability and maintainability

--- a/src/components/user_content/content_footer/ContentFooter.module.scss
+++ b/src/components/user_content/content_footer/ContentFooter.module.scss
@@ -51,11 +51,13 @@
     user-select: none;
     -webkit-user-select: none;
 
-    &:focus {
-        outline: none;        
-        box-shadow: none;  
+    &:focus,
+    &:active,
+    &:focus-visible {
+        outline: none;
+        box-shadow: none;
     }
-    
+
     .replyText {
         @include spacing.ml(2, xs);
     }
@@ -65,15 +67,16 @@
     display: block;
     width: 100%;
     clear: both;
-    text-align: inherit; 
+    text-align: inherit;
     white-space: nowrap;
-    background-color: transparent; 
+    background-color: transparent;
     border: 0;
     text-align: left;
     font-size: theme.$font-size-small;
     @include spacing.p(2, xs);
     @include spacing.px(3, xs);
-    &:hover{
+
+    &:hover {
         background-color: rgba(0, 0, 0, 0.03);
     }
 }
